2004-10-24  Benoît Dejean  <tazforever@dlfp.org>

	* src/proctable.c: (sort_ints), (proctable_new),
	(get_process_status), (get_process_name), (proctable_find_process),
	(find_parent), (insert_info_to_tree), (remove_children_from_tree),
	(remove_info_from_tree), (remove_info_from_list), (update_info),
	(get_info), (find_match_in_new_list), (refresh_list),
	(proctable_update_list), (proctable_update_all),
	(proctable_clear_tree), (proctable_free_table),
	(proctable_search_table): c-set-style linux.

2004-10-24  Benoît Dejean  <tazforever@dlfp.org>

	* src/defaulttable.h: Updated.

	* src/memmaps.c: (vmoff_strdup_printf): Added to handle 64/32bits hex
	format.
	(add_new_maps),
	(compare_memmaps), (update_memmaps_dialog), (close_memmaps_dialog),
	(sort_ints), (create_memmaps_tree), (memmaps_timer),
	(create_single_memmaps_dialog), (create_memmaps_dialog): Big cleanup, 
	including whitespaces.

2004-10-23  Benoît Dejean  <tazforever@dlfp.org>

	* src/defaulttable.h: Updated.

2004-10-23  Benoît Dejean  <tazforever@dlfp.org>

	* configure.in: Added --enable-more-warnings.

2004-10-23  Benoît Dejean  <tazforever@dlfp.org>

	* src/interface.c: (cpu_size_request): Cleaned.
	(create_sys_view): Fixed display on SMP systems.
	* src/load-graph.c: (get_load): Cleaned.

2004-10-23  Benoît Dejean  <tazforever@dlfp.org>

	* src/load-graph.c: (load_graph_draw), (get_load), (get_memory),
	(load_graph_update), (load_graph_unalloc), (load_graph_alloc),
	(load_graph_configure), (load_graph_expose), (load_graph_destroy),
	(load_graph_new), (load_graph_start), (load_graph_stop): c-set-style linux

2004-10-23  Benoît Dejean  <tazforever@dlfp.org>

	* src/defaulttable.h: Updated.
	
	* src/prettytable.c: (new_application), (application_finished),
	(pretty_table_new), (pretty_table_add_table),
	(pretty_table_get_icon), :
	* src/prettytable.h: pretty_table.app_hash now uses direct_hash/equal.
	Updated icon lookup.
	(free_entry), (free_value), (free_key) excluded.
