@@ -1,5 +1,12 @@
 2004-10-24  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/proctable.c: (proctable_free_info), (insert_info_to_tree),
+	(remove_children_from_tree), (find_match_in_new_list),
+	(refresh_list): Cleaned.
+	(proctable_search_table): Removed unused static variable index.
+
+2004-10-24  Benoît Dejean  <tazforever@dlfp.org>
+
 	* src/proctable.c: (sort_ints), (proctable_new),
 	(get_process_status), (get_process_name), (proctable_find_process),
 	(find_parent), (insert_info_to_tree), (remove_children_from_tree),
